--- a/Core/MovieSite.Application/MovieSite.Application.csproj
+++ b/Core/MovieSite.Application/MovieSite.Application.csproj
@@ -7,8 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Infrastructure\MovieSite.Persistence\MovieSite.Persistence.csproj" />
     <ProjectReference Include="..\MovieSite.Domain\MovieSite.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Features\MediatorDesignPattern\Handlers\" />
   </ItemGroup>
 
 </Project>
